force-app/main/default/objects/Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Related Contact is this Account&apos;s ______.</description>
    <inlineHelpText>Related Contact is this Account&apos;s ______.</inlineHelpText>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationship</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>