force-app/main/default/objects/Relationship__c/fields/Financial_Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Financial_Responsible_Party__c</fullName>
    <formula>IF(Related_Account__r.Financial_Responsible_Party__c &lt;&gt;&apos;&apos;, True, False)</formula>
    <label>Financially Responsible</label>
    <type>Checkbox</type>
</CustomField>