force-app/main/default/objects/Relationship__c/fields/Financially_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Financially_Responsible__c</fullName>
    <description>This will notate if the Primary Account is responsible for this patient financially.</description>
    <formula>IF(Related_Account__r.Financial_Responsible_Party__c &lt;&gt;&apos;&apos;, True, False)</formula>
    <label>Financially Responsible</label>
    <type>Checkbox</type>
</CustomField>