force-app/main/default/objects/Relationship__c/fields/Guardian__c.field-meta.xml
<CustomField>
    <fullName>Guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the parent acts as a legal guardian for the child. This indicates that the parent has the responsibility to make decisions and provide care and guidance in various aspects of the child&apos;s life.</inlineHelpText>
    <label>Guardian</label>
    <type>Checkbox</type>
</CustomField>