force-app/main/default/objects/Relationship__c/fields/Minor__c.field-meta.xml
<CustomField>
    <fullName>Minor__c</fullName>
    <formula>Account__r.Is_Minor__c</formula>
    <label>Minor</label>
    <type>Checkbox</type>
</CustomField>