force-app/main/default/objects/Relationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>Field that describes how the Related Contact is connected to the Account.</description>
    <inlineHelpText>Field that describes how the Related Contact is connected to the Account.</inlineHelpText>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Relationship_Type_Details</valueSetName>
    </valueSet>
</CustomField>