force-app/main/default/objects/Relationship__c/fields/System_Created__c.field-meta.xml
<CustomField>
    <fullName>System_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System field that indicates if this Relationship was created automatically as the reciprocal to another Relationships.</description>
    <inlineHelpText>System field that indicates if this Relationship was created automatically as the reciprocal to another Relationships.</inlineHelpText>
    <label>System Created</label>
    <type>Checkbox</type>
</CustomField>